Add support for build machines to tell the server to add text/links 
into build cells (TinderboxPrint).

When builds are started too frequently (more then once every five minutes) 
newest build is now kept and oldest build is thrown away.
	
New Configure script contributed by Stephen Lamm (slamm@yahoo-inc.com)
This includes a fix to allow Perl to be in different locations on the 
machine where make is run and on the machine where the webserver runs.
	
Now it is possible to include the time column on the left and right 
side of the status table.

There is now a working Perforce module for those who use this product
instead of CVS.

There is a module to interface with the req ticketing system.
	
New Summary format and number of errors displayed on build page by
        Adam Di Carlo <adam@onshore-devel.com>,

Spelling and consistency fixes from:
	Adam Di Carlo <adam@onshore-devel.com>, 
	Orion Poplawski <OPoplawski@cqg.com>,
	John L. Villanlovos <john.l.villalovos@intel.com>,

Change HTML generation so that the text browser 'links' 
(http://artax.karlin.mff.cuni.cz/~mikulas/links/) can
work with tinderbox.

Allow the build script to use a single process and alternate builds 
of different types.

Add a sample /etc/rc.d/init.d file for the RedHat Build machines.

Mail processing programs were not writing error files correctly.  
This has been broken since I separated out the mail processing module.

Add script to cull old builds from a directory of completed builds.

Let the VC and BT headers be configurable.  Too many companies find
this an important feature.

Allow Tinderbox to run via suid wrappers.  This is needed for some
times of mail delivery systems
	
No longer exclude 'priveledged id's from running Tinderbox. 
Now we require tinderbox to run as the id which the user specifies 
is the tinderbox id.

Better errors for failures in Storable.pm

BasicTxtHeader.pm had a bug which prevented it from working when using Storable
